# lsck0.github.io

./: Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
content/: about.md  docs.md  hello-world.md  home.md  imprint.md  macros.tex  meta.toml  privacy.md  projects.toml  publications.toml  references.bib  tos.md
content/cs/: lambda-calculus.md  sorting-algorithms.md  type-systems.md
content/cs/plt/: evaluation-strategies.md  hindley-milner.md
content/math/: fixed-points.md  group-theory.md
content/math/algebra/: rings.md
content/math/topology/: continuity.md
content/notes/: on-writing.md  tools-i-use.md
content/posts/: hello-world.md
content/posts/cs/: graph-algorithms.md  lambda-calculus.md  sorting-algorithms.md  type-systems.md
content/posts/cs/plt/: evaluation-strategies.md  hindley-milner.md
content/posts/math/: category-theory.md  fixed-points.md  group-theory.md  topological-complexity.md
content/posts/math/algebra/: fields.md  presentations.md  representations.md  rings.md  vector-spaces.md
content/posts/math/topology/: continuity.md
content/posts/notes/: on-writing.md  tools-i-use.md
content/posts/wiki/algebra/: algebras.md  fields.md  groups.md  lattices.md  modules.md  rings.md  vector-spaces.md
content/posts/wiki/basics/: functions.md  logic.md  relations.md  sets.md
content/posts/wiki/category-theory/: adjunctions.md  categories.md  co-limits.md  universal-properties.md
content/posts/wiki/homological-algebra/: chain-complexes.md
content/posts/wiki/numbers/: complex-numbers.md  integers.md  natural-numbers.md  quaternions.md  rational-numbers.md  real-numbers.md
crates/content/: Cargo.toml
crates/content/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: feeds.rs  index.rs  main.rs  og.rs  parse.rs
crates/ir/: Cargo.toml
crates/ir/src/: bib.rs  frontmatter.rs  lib.rs  parse.rs  resolve.rs  types.rs
crates/lsp/: Cargo.toml  README.md
crates/lsp/src/: main.rs
crates/macros/: Cargo.toml
crates/macros/src/: include_macros.rs  include_meta.rs  include_posts.rs  include_projects.rs  include_publications.rs  lib.rs  toml_segments.rs
public/: opensearch.xml  robots.txt
public/files/: header.sty
public/images/: og-image-placeholder.txt
public/js/: post.js  theme.js
public/scss/: styles.scss
src/: main.rs
src/components/: footer.rs  header.rs  layout.rs  listing.rs  mod.rs  pinned_panel.rs  post_search.rs  render.rs  scramble.rs  sidebar.rs  storage.rs
src/js/: post.js  theme.js
src/models/: meta.rs  mod.rs  post.rs  search.rs
src/pages/: about.rs  blog.rs  graph.rs  home.rs  imprint.rs  index.rs  mod.rs  not_found.rs  post.rs  privacy.rs  projects.rs  publications.rs  tos.rs
src/style/: _about.scss  _blog.scss  _code.scss  _footer.scss  _graph.scss  _header.scss  _home.scss  _knowledge.scss  _layout.scss  _listing.scss  _math.scss  _mermaid.scss  _not-found.scss  _pinned.scss  _post.scss  _print.scss  _reset.scss  _responsive.scss  _sidebar.scss  _theme.scss  _transitions.scss  styles.scss
