[workspace]
resolver = "3"
members = ["crates/*"]

[package]
name = "homepage"
version = "0.0.0"
edition = "2024"
build = "build/build.rs"

[dependencies]
macros = { path = "crates/macros" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.89"
leptos = { version = "0.8.16", features = ["csr", "nightly"] }
leptos_meta = "0.8.6"
leptos_router = { version = "0.8.12", features = ["nightly"] }
log = "0.4.29"
pulldown-cmark = { version = "0.13.1", default-features = false, features = [
    "html",
] }
wasm-bindgen = "0.2.112"
web-sys = { version = "0.3.89", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Location",
    "Storage",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
