[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.89"
leptos = { version = "0.8.16", features = ["csr", "nightly"] }
leptos_meta = "0.8.6"
leptos_router = { version = "0.8.12", features = ["nightly"] }
log = "0.4.29"
nucleo-matcher = "0.3"
proc-macro2 = "1.0"
pulldown-cmark = { version = "0.13.1", default-features = false, features = ["html"] }
quote = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.23"
wasm-bindgen = "0.2.112"
wasm-bindgen-test = "0.3.64"
web-sys = "0.3.89"

[package]
name = "homepage"
version = "0.0.0"
edition = "2024"
build = "build/build.rs"

[dependencies]
macros = { path = "crates/macros" }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
log = { workspace = true }
nucleo-matcher = { workspace = true }
pulldown-cmark = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "AddEventListenerOptions",
    "CanvasRenderingContext2d",
    "Document",
    "DomRect",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Location",
    "Storage",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
