[package]
name = "lsp"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "lsp"
path = "src/main.rs"

[dependencies]
ir = { path = "../ir" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
